# execution-orchestration-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PARAMETER_INDEX_EXECUTION.md  RELEASE_NOTES_0.1.0.md  THREAT_MODEL.md
execution_orchestration_core/: __init__.py  model.py  orchestrator.py  policies.py  redaction.py  trace.py  version.py
tests/: test_invariant_exe_boundedness.py  test_invariant_exe_fail_closed.py  test_invariant_exe_idempotency.py  test_invariant_exe_kill_switch.py  test_invariant_exe_secret_hygiene.py  test_invariant_exe_trace_keys.py
