[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-orchestration-core"
version = "0.1.0"
description = "Domain-agnostic execution orchestration core for FinalDecision actions: retries, timeouts, idempotency, kill-switch gating, and PacketV2 execution trace/reporting."
requires-python = ">=3.11"
dependencies = ["decision-schema>=0.2.2,<0.3"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["execution_orchestration_core*"]

[tool.ruff]
line-length = 100
target-version = "py311"
